website/code/mandelbrot-icpp-3.log
BUILD COMMANDS FOR: mandelbrot.icpp-3.icpp

Fri Mar 10 23:45:57 PST 2006

/opt/intel/cc/9.0/bin/icpc -c -O3 -ip -static -unroll  mandelbrot.icpp-3.c++ -o mandelbrot.icpp-3.c++.o &&  \
        /opt/intel/cc/9.0/bin/icpc mandelbrot.icpp-3.c++.o -o mandelbrot.icpp-3.icpp_run -O3 -ip -static -unroll  
/usr/include/c++/4.0.3/cmath(353): error: identifier "__builtin_powi" is undefined
    { return __builtin_powi(__x, __i); }
             ^

/usr/include/c++/4.0.3/cmath(357): error: identifier "__builtin_powif" is undefined
    { return __builtin_powif(__x, __n); }
             ^

/usr/include/c++/4.0.3/cmath(361): error: identifier "__builtin_powil" is undefined
    { return __builtin_powil(__x, __n); }
             ^

/usr/include/c++/4.0.3/complex(566): error: identifier "__builtin_cabsf" is undefined
    __complex_abs(__complex__ float __z) { return __builtin_cabsf(__z); }
                                                  ^

/usr/include/c++/4.0.3/complex(573): error: identifier "__builtin_cabsl" is undefined
    { return __builtin_cabsl(__z); }
             ^

/usr/include/c++/4.0.3/complex(593): error: identifier "__builtin_cargf" is undefined
    __complex_arg(__complex__ float __z) { return __builtin_cargf(__z); }
                                                  ^

/usr/include/c++/4.0.3/complex(596): error: identifier "__builtin_carg" is undefined
    __complex_arg(__complex__ double __z) { return __builtin_carg(__z); }
                                                   ^

/usr/include/c++/4.0.3/complex(600): error: identifier "__builtin_cargl" is undefined
    { return __builtin_cargl(__z); }
             ^

/usr/include/c++/4.0.3/complex(678): error: identifier "__builtin_ccosl" is undefined
    { return __builtin_ccosl(__z); }
             ^

/usr/include/c++/4.0.3/complex(701): error: identifier "__builtin_ccoshf" is undefined
    __complex_cosh(__complex__ float __z) { return __builtin_ccoshf(__z); }
                                                   ^

/usr/include/c++/4.0.3/complex(704): error: identifier "__builtin_ccosh" is undefined
    __complex_cosh(__complex__ double __z) { return __builtin_ccosh(__z); }
                                                    ^

/usr/include/c++/4.0.3/complex(708): error: identifier "__builtin_ccoshl" is undefined
    { return __builtin_ccoshl(__z); }
             ^

/usr/include/c++/4.0.3/complex(734): error: identifier "__builtin_cexpl" is undefined
    { return __builtin_cexpl(__z); }
             ^

/usr/include/c++/4.0.3/complex(794): error: identifier "__builtin_csinl" is undefined
    { return __builtin_csinl(__z); }
             ^

/usr/include/c++/4.0.3/complex(817): error: identifier "__builtin_csinhf" is undefined
    __complex_sinh(__complex__ float __z) { return __builtin_csinhf(__z); }      
                                                   ^

/usr/include/c++/4.0.3/complex(820): error: identifier "__builtin_csinh" is undefined
    __complex_sinh(__complex__ double __z) { return __builtin_csinh(__z); }      
                                                    ^

/usr/include/c++/4.0.3/complex(824): error: identifier "__builtin_csinhl" is undefined
    { return __builtin_csinhl(__z); }      
             ^

/usr/include/c++/4.0.3/complex(868): error: identifier "__builtin_csqrtl" is undefined
    { return __builtin_csqrtl(__z); }
             ^

/usr/include/c++/4.0.3/complex(895): error: identifier "__builtin_ctanl" is undefined
    { return __builtin_ctanl(__z); }
             ^

/usr/include/c++/4.0.3/complex(916): error: identifier "__builtin_ctanhf" is undefined
    __complex_tanh(__complex__ float __z) { return __builtin_ctanhf(__z); }
                                                   ^

/usr/include/c++/4.0.3/complex(919): error: identifier "__builtin_ctanh" is undefined
    __complex_tanh(__complex__ double __z) { return __builtin_ctanh(__z); }
                                                    ^

/usr/include/c++/4.0.3/complex(923): error: identifier "__builtin_ctanhl" is undefined
    { return __builtin_ctanhl(__z); }
             ^

/usr/include/c++/4.0.3/complex(975): error: identifier "__builtin_cpowl" is undefined
    { return __builtin_cpowl(__x, __y); }
             ^

compilation aborted for mandelbrot.icpp-3.c++ (code 2)
make[3]: [mandelbrot.icpp-3.icpp_run] Error 2 (ignored)
rm: cannot remove `mandelbrot.icpp-3.c++.o': No such file or directory
rm: cannot remove `mandelbrot.icpp-3.o': No such file or directory
make[3]: [mandelbrot.icpp-3.icpp_run] Error 1 (ignored)

=================================================================
COMMAND LINE (%A is single numeric argument):

mandelbrot.icpp-3.icpp_run %A
Error, could not exec mandelbrot.icpp-3.icpp_run 200 (No such file or directory)
PATH=/opt/shootout/shootout/bench/mandelbrot:/opt/shootout/shootout/bench/mandelbrot/tmp:/opt/xds_x86/bin:/opt/intel/fc/9.0/bin:/opt/intel/cc/9.0/bin:/usr/lib/poplog/current-poplog/pop/pop:/usr/lib/smarteiffel/bin:/usr/local/Acrobat5/bin:/usr/lib/postgresql/bin:/home/brent/GNUstep/Tools:/usr/local/lib/GNUstep/Local/Tools:/usr/local/lib/GNUstep/Network/Tools:/usr/lib/GNUstep/System/Tools:/usr/local/bin:/usr/bin:/bin:/usr/bin/X11:/usr/games:/usr/lib/poplog/current-poplog/pop/com
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
